# 2024_CARLA-Autonomous-Driving-Leaderboard

./: README.md
behavior_trajectory_planner/: CMakeLists.txt  package.xml
behavior_trajectory_planner/src/: behavior_trajectory_planner.cpp
collision_check/: CMakeLists.txt  package.xml
collision_check/msg/: Tracking.msg  TrajectoryPoint.msg
collision_check/src/: collision_check.cpp  test_collision_check.cpp
dwa_ros_node/: CMakeLists.txt  package.xml
dwa_ros_node/msg/: DetectionInfo.msg
dwa_ros_node/src/: control_inputs.csv  dwa_node.cpp  trajectory_log.csv  trajectory_log_bicycle1.csv  trajectory_log_bicycle2.csv  trajectory_log_kinematic1.csv  trajectory_log_kinematic2.csv
lead_vehicle_flag/: CMakeLists.txt  package.xml
lead_vehicle_flag/msg/: TrackingArray.msg
lead_vehicle_flag/src/: lead_vehicle_flag.cpp  lead_vehicle_with_tracking.cpp  marker_lead_vehicle.cpp  smoothing_path.csv  test.cpp
lidar_processing/: CMakeLists.txt  package.xml
lidar_processing/src/: lidar_before.cpp  lidar_downsampling_node.cpp  projection.cpp
localization/: CMakeLists.txt  package.xml
localization/launch/: localization.launch
localization/src/: calculate_velocity.py  localization.cpp  localization_visualization.py  make_gnss_gt_and_odometry.py  visualization.py  visualization_livestream.py
velocity_planner/: CMakeLists.txt  package.xml
velocity_planner/msg/: DetectionInfoArray.msg
velocity_planner/src/: velocity_planner.cpp
