<?xml version="1.0"?>
<package format="2">
  <name>dwa_ros_node</name>
  <version>0.0.1</version>
  <description>The DWA ROS node package</description>

  <maintainer email="you@example.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>carla_msgs</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>message_generation</build_depend> <!-- 여기에 추가 -->


  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>message_generation</exec_depend> <!-- 여기에 추가 -->
  <exec_depend>message_runtime</exec_depend> <!-- 여기에 추가 -->

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
